Fixed up small issues with overall website - Added page buttons for recipes - Fixed up styling issues in different screen sizes - implemented recipe book mobile tab functionality

--- a/includes/recipe/recipe-card.html
+++ b/includes/recipe/recipe-card.html
@@ -1,6 +1,6 @@
 
 <template id="recipe-card-template">
-    <button class="recipe-link" id="recipeCard" onclick="linkOpen(event)">
+    <a class="recipe-link" id="recipeCard" href="" onclick="linkOpen(event)">
         <div class="recipe-card">
             <img class="recipe-image" id="recipe-image" src="" alt="Recipe Image">
             <div class="recipe-info">
@@ -9,5 +9,5 @@
             </div>
             
         </div>
-    </button>
+    </a>
 </template>
