--- a/styles/recipe-book.css
+++ b/styles/recipe-book.css
@@ -16,8 +16,9 @@ h4{
     font-size:33px;
 }
 
+
 .container {
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     display: flex;
     flex-wrap: nowrap;
@@ -32,6 +33,7 @@ h4{
 
 /*Swipe bejaviour of each section*/
 .section {
+    width: 100vw;
     flex: 0 0 100%;
     scroll-snap-align: start;
     height: 100vh;
@@ -60,17 +62,39 @@ h4{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 5%;
+    padding-top: 10vh;
+    gap: 20px;
+}
+
+/*Recipe photo cards*/
+.photo-card{
+    width: 75%;
+    height: 50vh;
+    background-color: white;
+    border-radius: 20px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+}
+
+.photo-img{
+    width: 100%;
+    height: 80%;
+    overflow: hidden;
+    background-color: white;
+}
+
+.photo-desc{
+    width: 100%;
+    height: 20%;
+    background-color: #34929C;
 }
 
 .page.cream{
-    position: absolute;
-    right: 5vw;
-    top: 26vh;
     width: 40vw;
     display: flex;
     flex-direction: column;
-    padding: 30px;
+    padding: 30px 10px 0px 30px;
     background-color: #FFE7AB;
     border-radius: 15px;
 }
@@ -106,25 +130,33 @@ h4{
     color: #403021;
 }
 
-
 .ingredient-container{
     padding: 20px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 20px;
+    gap: 10px;
 }
 .ingredient-container p{
-    font-size: 20px;
+    font-size: 17px;
 }
 
 
 /* YELLOW PAGE/SECTION */
 .page.yellow{
+    position: relative;
+    right: 0;
     display: flex;
     flex-direction: column;
     padding: 3%;
     justify-content: space-between;
     background-color: #FFD876;
+}
+
+.page-content-yellow{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
 .text-nav{
@@ -156,8 +188,7 @@ h4{
 /*dropdown menu*/
 .dropdown{
     height: 100%;
-    width: 65%;
-    
+    width: 75%;
     border-radius: 15px;
 }
 
@@ -211,28 +242,28 @@ h4{
     transform: rotate(180deg);
 }
 
+.down-arrow{
+    display: none;
+}
 
 
-/*Recipe photo cards*/
-.photo-card{
-    width: 80%;
-    height: 40vh;
+/*Instructions*/
+
+
+.recipe-card{
+    width: 50%;
+    height: 25vh;
     background-color: white;
     border-radius: 20px;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
 }
 
-.photo-img{
-    height: 80%;
-    background-color: red;
+.steps{
+    font-size: 20px;
+    padding: 5px 5px 15px 5px;
 }
-
-.photo-desc{
-    width: 100%;
-    height: 20%;
-    background-color: #34929C;
-}
-
 
 
 /*DESKTOP SCREEN*/
@@ -261,8 +292,8 @@ h4{
     
     
     .section-container{
-        width: 100%;
-        height: 100%;
+        width: 100vw;
+        height: 100vh;
         display: flex;
     }
 
@@ -287,17 +318,22 @@ h4{
 }
 
 @media screen and (max-width: 600px){
+    html body{
+        height: 100vh;
+        overflow-y: hidden;
+    }
     .btn-container.desktop{
         display: none;
     }
-    .bt
+    
     /*Prev & back buttons mobile*/
     .btn-container.mobile{
         width: 100vw;
         display: flex;
         justify-content: center;
-        bottom: 20px;
         position: fixed;
+        bottom: 1vh;
+        left: 0;
         gap: 10px;    
     }
     
@@ -325,7 +361,30 @@ h4{
     }
     
     /*Text font size &  colour*/
+    .recipe-title{
+        font-size: 30px !important;
+    }
     
+    .dropdown-title{
+        font-size: 15px;
+    }
+    .dropdown-content p{
+        font-size: 12px;
+    }
+     
+    .ingredient-container p{
+        font-size: 12px;
+    }
+    
+    .text-nav p{
+        font-size: 12px;
+    }
+    
+    .recipe-desc{
+        width: 70vw;
+        font-size: 11px;
+        padding-left: 5%;
+    }
     .btn-text{
         font-family: 'Lorenzo-Sans';
         font-weight: medium;
@@ -342,5 +401,162 @@ h4{
     .btn-icon{
         padding-top: 3px;
     }
+
+    .down-arrow {
+        transition: transform 0.3s ease;
+    }
     
+
+    
+
+    /*Pages & sections*/
+    .section{
+        flex-direction: column;
+    }
+    .page.white{
+        position: relative; 
+        top: 0vh;
+        width: 100vw;
+        height: 100vh;
+        padding-top: 25%;
+    }
+    /*Recipe photo cards*/
+    .photo-card{
+        width: 85%;
+        height: 30vh;
+    }
+
+    .page.white{
+        padding-top: 10vh;
+    }
+
+    .recipe-card{
+        width: 70%;
+        height: 20vh;
+    }
+
+    .page.cream{
+        width: 100vw;
+        height: 18vh;
+        position: relative;
+        left: -12px;
+        bottom: -2vh;
+        padding: 20px 10px 100px 30px;
+        border-radius: 30px 30px 0 0;
+    }
+
+    .title-bar{
+        width: 100%;
+        padding: 0 10px 0 0;
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .ingredient{
+        display: flex;
+        align-items: center;
+        gap: 5px;
+    }
+        
+    .ingredient-container{
+        padding: 10px;
+        display: grid;
+        grid-template-columns: 1fr ;
+        gap: 10px;
+    }
+    .ingredient-container p{
+        font-size: 17px;
+    }
+    
+    
+    /* YELLOW PAGE/SECTION */
+    .page.yellow{
+        width: 100vw;
+        height: 25vh;
+        position: relative;
+        bottom: 0vh;
+        right: 0;
+        display: flex;
+        flex-direction: column;
+        padding: 3%;
+        padding-bottom: 0vh;
+        justify-content: space-between;
+        border-radius: 30px 30px 0 0;
+    }
+    
+    .text-nav{
+        display: none;
+    }
+    .text-nav p{
+        font-size: 12px;
+    }
+    
+    
+    .recipe-desc{
+        width: 90vw;
+        font-size: 13px;
+        padding-left: 2%;
+    }
+    .nutrition{
+        height: 40%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+    
+    .recipe-bar{
+        padding: 10px 10px 10px 15px;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .down-arrow{
+        display: block;
+    }
+    
+    /*dropdown menu*/
+    .dropdown{
+        width: 85%;
+    }
+    
+    .dropdown-header{
+        height: 15%;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 30px;
+        background-color: #34929C;
+        border-radius: 15px;
+    }
+    
+    .dropdown-title{
+       font-size: 20px;
+    }
+
+    .dropdown-content {
+        display: none;
+        height: 24vh;
+        padding: 10px 30px;
+    }
+    
+    .dropdown-content p{
+        font-size: 16px;
+    }
+
+    /*Instructions*/
+    .steps{
+        font-size: 15px;
+        padding: 15px 5px 10px 0px;
+    }
+
+    /*Variations & reheating*/
+    .variations{
+        height: 50vh;
+        font-size: 15px;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
 }
