--- a/styles/recipes.css
+++ b/styles/recipes.css
@@ -48,6 +48,9 @@
 }
 
 /*Recipe Card elements*/
+.recipe-link{
+    background-color: transparent;
+}
 
 .recipe-card {
     border-radius: 10px;
@@ -55,13 +58,14 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+
 }
 
 .recipe-image {
     object-fit: cover;
     border-radius: 10px 10px 0 0;
     height: 70%;
-    background-color: white;
+    background-color: transparent;
     
 }
 
@@ -77,6 +81,7 @@
 .recipe-name {
     font-size: 1.2em;
     margin: 10px 0;
+    text-align: start;
 }
 
 .recipe-tags {
